RecipeControllers with tests